# ha-4noks-elios4you

./: .devcontainer.json  .gitignore  .pre-commit-config.yaml  .pymarkdown.json  .repo-sync.yaml  CHANGELOG.md  CLAUDE.md  README.md  hacs.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature_request.yml
.github/workflows/: lint.yml  release.yml  test.yml  validate.yml
config/: configuration.yaml
custom_components/4noks_elios4you/: __init__.py  api.py  config_flow.py  connection_manager.py  const.py  coordinator.py  device_trigger.py  diagnostics.py  helpers.py  icons.json  manifest.json  quality_scale.yaml  repairs.py  sensor.py  switch.py
custom_components/4noks_elios4you/telnetlib/: __init__.py
custom_components/4noks_elios4you/translations/: de.json  en.json  es.json  et.json  fi.json  fr.json  it.json  nb.json  pt.json  sv.json
docs/releases/: README.md  v0.2.0-beta.1.md  v0.2.0-beta.2.md  v0.2.0-beta.3.md  v0.2.0.md  v0.3.0-beta.1.md  v0.4.0-beta.1.md  v0.4.0-beta.2.md  v0.4.0-beta.3.md  v1.0.0.md  v1.1.0-beta.1.md  v1.1.0-beta.2.md  v1.1.0.md  v1.1.1.md  v1.2.0.md  v1.3.0-beta.1.md
e4u-client/: e4u.py  e4u_telnetlib3.py
e4u-client/lib/: telnetlib.py
tests/: __init__.py  conftest.py  test_api.py  test_config_flow.py  test_connection_manager.py  test_coordinator.py  test_device_trigger.py  test_diagnostics.py  test_helpers.py  test_init.py  test_repairs.py  test_sensor.py  test_switch.py
