[project]
name = "ha-4noks-elios4you"
version = "0.3.0"
description = "Home Assistant custom integration for 4-noks Elios4you energy monitoring devices using Telnet"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [{ name = "alexdelprete" }]
keywords = ["home-assistant", "4noks", "elios4you", "telnet", "energy", "monitoring"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
"Homepage" = "https://github.com/alexdelprete/ha-4noks-elios4you"
"Bug Tracker" = "https://github.com/alexdelprete/ha-4noks-elios4you/issues"

[tool.setuptools.packages.find]
include = ["custom_components*"]

[project.optional-dependencies]
dev = [
    "colorlog>=6.10.0",
    "homeassistant>=2025.10.0",
    "homeassistant-stubs",
    "mdformat",
    "mdformat-gfm",
    "pre-commit",
    "pymarkdownlnt",
    "telnetlib3>=2.0.4",
    "ty",
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov",
    "pytest-homeassistant-custom-component>=0.13.0",
    "pytest-timeout",
]

[dependency-groups]
lint = [
    "homeassistant-stubs",
    "mdformat",
    "mdformat-gfm",
    "pre-commit",
    "pymarkdownlnt",
    "ruff>=0.8.0",
    "ty",
]
pytest = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov",
    "pytest-homeassistant-custom-component>=0.13.0",
    "pytest-timeout",
]
dev = [
    "colorlog>=6.10.0",
    "homeassistant>=2025.10.0",
    "telnetlib3>=2.0.4",
    { include-group = "lint" },
    { include-group = "pytest" },
]

[tool.codespell]
skip = "*.json"
quiet-level = 3
ignore-words-list = "hass"

[tool.pytest.ini_options]
addopts = """
  --timeout=20
  --cov=custom_components.4noks_elios4you
  --cov-report=term-missing
"""
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
branch = true
source = ["custom_components.4noks_elios4you"]
relative_files = true

[tool.coverage.report]
show_missing = true

# ty type checker configuration
# Note: In CI, we create a symlink (fournoks_elios4you -> 4noks_elios4you)
# because package names starting with digits are not valid Python identifiers.
[tool.ty.environment]
python-version = "3.13"
python-platform = "linux"
root = "custom_components"

[tool.ty.rules]
# Promote warnings to errors for strictness
deprecated = "error"
redundant-cast = "error"

[tool.ruff]
line-length = 100
indent-width = 4
fix = true
target-version = "py313"
required-version = ">=0.8.0"

extend-exclude = [
    ".vscode",
    ".devcontainer",
    ".github",
    "build",
    "dist",
    "e4u-client",
    "custom_components/4noks_elios4you/telnetlib",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "A001",
    "ASYNC",
    "B002",
    "B005",
    "B007",
    "B009",
    "B014",
    "B015",
    "B017",
    "B018",
    "B023",
    "B024",
    "B026",
    "B032",
    "B035",
    "B904",
    "B905",
    "BLE",
    "C",
    "COM818",
    "D",
    "DTZ003",
    "DTZ004",
    "E",
    "F",
    "F541",
    "FLY",
    "FURB",
    "G",
    "I",
    "ICN001",
    "INP",
    "ISC",
    "LOG",
    "N804",
    "N805",
    "N815",
    "PERF",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "RET",
    "RSE",
    "RUF005",
    "RUF006",
    "RUF007",
    "RUF008",
    "RUF010",
    "RUF013",
    "RUF016",
    "RUF017",
    "RUF018",
    "RUF019",
    "RUF020",
    "RUF021",
    "RUF022",
    "RUF023",
    "RUF024",
    "RUF026",
    "RUF030",
    "RUF032",
    "RUF033",
    "RUF034",
    "RUF100",
    "RUF101",
    "RUF200",
    "S102",
    "S103",
    "S108",
    "S306",
    "S307",
    "S313",
    "S314",
    "S315",
    "S316",
    "S317",
    "S318",
    "S319",
    "S601",
    "S602",
    "S604",
    "S608",
    "S609",
    "SIM",
    "SLF",
    "SLOT",
    "T100",
    "T20",
    "TC",
    "TID",
    "TRY",
    "UP",
    "UP031",
    "UP032",
    "W",
]

ignore = [
    "ASYNC109",
    "ASYNC110",
    "D202",
    "D203",
    "D213",
    "D406",
    "D407",
    "E501",
    "PLC1901",
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PLR2004",
    "PLW1641",
    "PLW2901",
    "PT011",
    "PT018",
    "RUF001",
    "RUF002",
    "RUF003",
    "RUF015",
    "SIM102",
    "SIM103",
    "SIM108",
    "SIM115",
    "TC001",
    "TC002",
    "TC003",
    "TC006",
    "TRY003",
    "TRY400",
    "UP046",
    "UP047",
    "UP049",
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q",
    "COM812",
    "COM819",
    "PLE0605",
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["INP001"]
"tests/*" = [
    "D",
    "E402",
    "S101",
    "SLF001",
    "PLR2004",
    "PLR0913",
    "C901",
    "B017",
    "PT006",
    "S108",
]
# Existing patterns in telnet code - not changing to avoid breaking changes
"custom_components/4noks_elios4you/api.py" = [
    "BLE001",
    "PERF403",
    "SIM211",
    "TRY300",
    "TRY301",
]
"custom_components/4noks_elios4you/coordinator.py" = [
    "RSE102",
    "TRY300",
]
"custom_components/4noks_elios4you/sensor.py" = [
    "PERF401",
]
"custom_components/4noks_elios4you/switch.py" = [
    "PERF401",
    "SIM210",
]

[tool.ruff.lint.flake8-import-conventions.extend-aliases]
voluptuous = "vol"
"homeassistant.helpers.area_registry" = "ar"
"homeassistant.helpers.config_validation" = "cv"
"homeassistant.helpers.device_registry" = "dr"
"homeassistant.helpers.entity_registry" = "er"
"homeassistant.helpers.issue_registry" = "ir"
"homeassistant.util.dt" = "dt_util"

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"async_timeout".msg = "use asyncio.timeout instead"
"pytz".msg = "use zoneinfo instead"

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["homeassistant"]
combine-as-imports = true
split-on-trailing-comma = false

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mdformat]
wrap = 120
number = true

[tool.pymarkdown]
plugins.md013.enabled = true
plugins.md013.line_length = 120
plugins.md013.code_block_line_length = 120
plugins.md013.tables = false
plugins.md013.headings = false
plugins.md024.enabled = true
plugins.md024.siblings_only = true
plugins.md033.enabled = true
plugins.md036.enabled = false
plugins.md040.enabled = true
plugins.md041.enabled = true
plugins.md050.enabled = true
plugins.md050.strong_style = "asterisk"
